--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "io.github.padamchopra.easi"
+        applicationId "io.github.padamchopra.EASI"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
