--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.github.padamchopra.easi">
+    package="io.github.padamchopra.EASI">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,10 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".LoginActivity"></activity>
+        android:theme="@style/Theme.MaterialComponents.NoActionBar">
+        <activity android:name="io.github.padamchopra.EASI.LoginActivity"></activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="io.github.padamchopra.EASI.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
